# stay3

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  app-example.data  app-example.html  app-example.js  app-example.wasm  cmake_install.cmake  earth-example.html  earth-example.js  earth-example.wasm  index.html  input-example.data  input-example.html  input-example.js  input-example.wasm  license.md  main.cppm  physics-example.html  physics-example.js  physics-example.wasm  readme.md  text-example.html  text-example.js  text-example.wasm  throwaway.md  todo.md
.github/workflows/: build_and_test.yml  build_web.yml
assets/: index.html
assets/fonts/: index.html
assets/scripts/: base_component.as  component.lua
assets/shaders/: my_shader.wgsl
assets/textures/: index.html
core/: any_map.cppm  color.cppm  error.cppm  file.cppm  id_generator.cppm  index.html  logger.cppm  math.cppm  math_ops.cppm  matrix.cppm  mod.cppm  quaternion.cppm  rect.cppm  signal.cppm  time.cpp  time.cppm  transform.cpp  transform.cppm  variant_helper.cppm  vector.cppm
dino/: cmake_install.cmake  dino.data  dino.html  dino.js  dino.wasm  index.html
ecs/: component.cppm  component_ref.cppm  dependency.cppm  ecs_registry.cppm  entities_holder.cppm  entity.cppm  index.html  mod.cppm  system_data.cppm  system_manager.cppm  system_wrapper.cppm
example/: CMakeLists.txt  app.example.cpp  earth.example.cpp  font_atlas.example.cpp  generate_index.mjs  input.example.cpp  physics.example.cpp  text.example.cpp
example/dino/: CMakeLists.txt  main.cpp
example/slope/: CMakeLists.txt  main.cpp
graphics/: index.html  mod.cppm
graphics/core/: camera.cppm  error.cppm  glfw_window.cpp  glfw_window.cppm  index.html  material.cppm  mesh_builder.cppm  mod.cppm  rendered_mesh.cppm  texture.cppm  vertex.cppm
graphics/text/: font.cppm  index.html  mod.cppm  text.cppm
input/: event.cppm  index.html  keyboard.cppm  mod.cppm
node/: index.html  mod.cppm  node.cpp  node.cppm  tree_context.cppm
physics/: collider.cppm  contact_listener.cppm  convert.cppm  index.html  mod.cppm  physics_debug.cppm  properties.cppm  rigidbody.cppm  world.cppm
program/: app.cpp  app.cppm  config.cppm  index.html  mod.cppm
slope/: index.html  slope-example.data  slope-example.html  slope-example.js  slope-example.wasm
src/: main.cppm
src/core/: any_map.cppm  app.cpp  app.cppm  color.cppm  file.cppm  id_generator.cppm  logger.cppm  math.cppm  math_ops.cppm  matrix.cppm  mod.cppm  quaternion.cppm  rect.cppm  signal.cppm  time.cpp  time.cppm  transform.cpp  transform.cppm  variant_helper.cppm  vector.cppm
src/ecs/: component.cppm  component_ref.cppm  dependency.cppm  ecs_registry.cppm  entities_holder.cppm  entity.cppm  mod.cppm  system_data.cppm  system_manager.cppm  system_wrapper.cppm
src/graphics/: camera.cppm  error.cppm  font.cppm  glfw_window.cpp  glfw_window.cppm  material.cppm  mesh_builder.cppm  mod.cppm  rendered_mesh.cppm  text.cppm  texture.cppm  vertex.cpp  vertex.cppm
src/graphics/core/: camera.cppm  glfw_window.cpp  material.cppm  mesh_builder.cppm  mod.cppm  rendered_mesh.cppm  vertex.cppm
src/graphics/text/: font.cppm  mod.cppm  text.cppm
src/input/: event.cppm  keyboard.cppm  mod.cppm
src/node/: mod.cppm  node.cpp  node.cppm  node_registry.cppm  tree_context.cppm
src/physics/: collider.cppm  contact_listener.cppm  convert.cppm  mod.cppm  physics_debug.cppm  properties.cppm  rigidbody.cppm  world.cppm
src/program/: app.cpp  app.cppm  app_launcher.cppm  config.cppm  mod.cppm
src/system/: error.cppm  id_generator.cppm  math.cppm  math_ops.cppm  matrix.cppm  mod.cppm  quaternion.cppm  signal.cppm  time.cpp  time.cppm  transform.cpp  transform.cppm  vector.cppm
src/systems/: mod.cppm  runtime_info.cppm
src/systems/physics/: physics_system.cppm
src/systems/render/: bind_group_layouts.cppm  components.cppm  config.cppm  init_result.cpp  init_result.cppm  material.cppm  material_subsystem.cppm  mesh_subsystem.cppm  mod.cppm  pipeline.cpp  pipeline.cppm  render_pass.cppm  render_system.cpp  render_system.cppm  texture_subsystem.cppm
src/systems/scripts/: error.cppm  script_component.cppm  script_database.cppm  script_langs.cppm  script_manager.cppm  script_system.cppm
src/systems/text/: font_atlas.cppm  font_state.cppm  text_state.cppm  text_system.cppm
src/systems/transform/: global_transform.cpp  global_transform.cppm
src/window/: base_window.cppm  event.cppm  mod.cppm
systems/: index.html  mod.cppm  runtime_info.cppm
systems/physics/: index.html  physics_system.cppm
systems/render/: config.cppm  index.html  render_system.cpp  render_system.cppm
systems/render/priv/: components.cppm  (+13 more)
systems/text/: index.html  text_system.cppm
systems/transform/: global_transform.cpp  global_transform.cppm  index.html
test/: CMakeLists.txt  main.test.cpp
test/assets/scripts/: bird.as  bird.lua
test/core/: any_map.test.cpp  color.test.cpp  file.test.cpp  id_generator.test.cpp  matrix.test.cpp  quaternion.test.cpp  signal.test.cpp  test_helper.cppm  time.test.cpp  transform.test.cpp  vector.test.cpp
test/ecs/: component_ref.test.cpp  dependency.test.cpp  ecs_registry.test.cpp  ecs_registry_advanced.test.cpp  entities_holder.test.cpp  entity.test.cpp  system_data.test.cpp  system_manager.test.cpp  system_wrapper.test.cpp
test/graphics/: camera.test.cpp  glfw_window.test.cpp  mesh_builder.test.cpp
test/input/: event.test.cpp  keyboard.test.cpp
test/node/: node.test.cpp  node_ecs.test.cpp
test/physics/: world.test.cpp
test/system/: matrix.test.cpp  quaternion.test.cpp  signal.test.cpp  test_helper.cppm  transform.test.cpp  vector.test.cpp
test/systems/: global_transform.test.cpp  global_transform_advanced.test.cpp  render_system.test.cpp
test/systems/script/angelscript/: smoke_test.test.cpp
test/systems/script/lua/: delete_me.test.cpp
test/web/: .puppeteerrc.cjs  browser.js  bullshit.js  check_browser.js  gpu-info.txt  index.js  package-lock.json  package.json  pretest.js  server.js  test-shell.html
test/window/: event.test.cpp
(+26 files in other folders)
